# gnome-ppx-svn

./: Makefile.am  NEWS  README  autoungen.sh  configure.in  gnome_ppx.prj
binreloc/: Makefile.am
gnome-pppoa/: pppoa_dialer.desktop
gnome-pppoa/schemas/: apps_gnome-pppoa.schemas
gnome-pppoa/src/: Makefile.am  pppoa_db.c
gnome-pppoe/schemas/: apps_gnome-pppoe.schemas
gnome-pppoe/src/: main.c  network.c  network.h  pppoe_dialer.c
gnome-pptp/: Makefile.am
gnome-pptp/schemas/: apps_gnome-pptp.schemas
gnome-pptp/src/: pptp_dialer.c
gnome-ppx/: AUTHORS  ChangeLog  TODO  autogen.sh  config.h.in  gnome_ppx.pws
gnome-ppx/ac-helpers/: binreloc.m4
gnome-ppx/gnome-pppoa/: Makefile.am
gnome-ppx/gnome-pppoa/data/: addressbook.xml
gnome-ppx/gnome-pppoa/src/: main.c  pppoa_db.h  pppoa_db_gui.c  pppoa_db_gui.h  pppoa_dialer.c  pppoa_dialer.h
gnome-ppx/gnome-pppoe/: Makefile.am  pppoe_dialer.desktop
gnome-ppx/gnome-pppoe/src/: Makefile.am  pppoe_dialer.h
gnome-ppx/gnome-pptp/: pptp_dialer.desktop
gnome-ppx/gnome-pptp/src/: Makefile.am  main.c  pptp_dialer.h
gnome-ppx/libpppd-gnome/glade/: libpppd-gnome.glade
gnome-ppx/libpppd-gnome/src/: Makefile.am  ppp_progress.h  ppp_pty_dialer.h  ppp_status.c  ppp_status.h
gnome-ppx/libpppd/src/: Makefile.am  pppd_monitor.h  pppd_util.h
gnome-ppx/res/: basic_tray_icon.xml  ppp_tray.xml  pppoe_connection.xml  pppoe_editor.xml  state_listener.xml  state_listener_impl.xml
gnome-ppx/specs/: autopackage.tpl  gnome-ppx.mspec.in  metaspec.py  tgz.tpl
gnome-ppx/tlib/tlib/: tcountries.h  tglade.c  tglade.h  tmacros.h  trefbag.c  tsu-gksu.c  tsu-gnomesu.c  tsu-gnomesu.h  ttrayicon.h
libnautilus-burn-python/: ChangeLog  Makefile  README  nautilus_burn.c  nautilus_burn.defs  nautilus_burn.override  nb_drive.c  nb_drive.h  nb_module.c  nb_track.c  nb_track.h  nb_typebuiltins.c  nb_typebuiltins.h  setup.py
libnautilus-burn-python/examples/: write_iso.py
libnautilus-burn-python/nautilusburn/: __init__.py
libpppd-gnome/: Makefile.am
libpppd-gnome/glade/: Makefile.am  ppp_get_password.glade
libpppd-gnome/src/: netstatus-sysdeps.c  netstatus-sysdeps.h  ppp.marshallers  ppp_dialer.c  ppp_dialer.h  ppp_get_password.c  ppp_manager.c  ppp_manager.h  ppp_progress.c  ppp_pty_dialer.c  ppp_state_listener.c  ppp_state_listener.h  pppd_gnome.h
libpppd-gnome/test/: Makefile.am  test_ppp_dialer.c  test_ppp_status.c  test_tray.c
libpppd/src/: pppd.h  pppd.sh  pppd_monitor.c  pppd_parser.c  pppd_parser.h  pppd_util.c  test_pppd_monitor.c
po/: POTFILES.in  pt_PT.po
releases/libnautilus-burn-python-0.1.1/: nautilus_burn.c  nautilus_burn.override  nb_drive_selection.defs
releases/libnautilus-burn-python-0.1.1/examples/: Makefile  drive_selection.py
releases/libnautilus-burn-python-0.1.1/nautilus_burn/: __init__.py
releases/libnautilus-burn-python-0.1.2/: INSTALL  nautilus_burn.defs
releases/libnautilus-burn-python-0.1.2/examples/: bacon_test.c  cd_drive_test.c  write_iso.py
releases/serpentine-0.2/: Makefile  audio.py  converting.py  mastering.py  recording.py  serpentine.glade
releases/serpentine-0.3/: TODO  configure.in
releases/serpentine-0.3/scripts/: serpentine
releases/serpentine-0.3/serpentine/: recording.py
releases/serpentine-0.3/ui/: serpentine.glade
releases/serpentine-0.4/: TODO
releases/serpentine-0.4/serpentine/: __init__.py  gnome_util.py  gtk_util.py
releases/totem-pl-parser-python-0.1/: configure.in
releases/totem-pl-parser-python-0.1/playlist_parser/: Makefile.am
releases/totem-pl-parser-python-0.1/totem/: Makefile.am
res/: Makefile  ppp_dialer.xml  ppp_listener.xml  ppp_manager.xml  ppp_progress.xml  ppp_status.xml  pppoe_account.xml  pppoe_dialer.xml
serpentine/: ChangeLog  Makefile  Makefile.am  TODO  audio.py  configure.in  converting.py  gaw.py  gnome_util.py  gtk_util.py  mastering.py  operations.py  preferences.py  recording.py  serpentine.glade  serpentine_shell.py
serpentine/data/: serpentine.desktop  serpentine.desktop.in  serpentine.glade
serpentine/scripts/: serpentine
serpentine/serpentine/: __init__.py  audio.py  converting.py  gaw.py  gtk_util.py  gtkutil.py  mastering.py  preferences.py  recording.py  release.py.in  services.py
serpentine/ui/: serpentine.glade
specs/: makepkg  rpm.tpl
tlib/: Makefile.am  README
tlib/tlib/: Makefile.am  tcountries.c  tmodule.c  tmodule.h  trefbag.h  tsu-gksu.h  tsu.c  tsu.h  ttrayicon.c  tutil.c  tutil.h
totem-pl-parser-python/: .Makefile.swp  .configure.in.swp  Makefile.am  autogen.sh  configure.in
totem-pl-parser-python/playlist_parser/: .Makefile.am.swp  Makefile.am  pl-parser-module.c  totem-pl-parser.defs  totem-pl-parser.override
totem-pl-parser-python/totem/: Makefile.am
