serpentinedir = $(pythondir)/serpentine
serpentine_PYTHON = \
	serpentine/audio.py        \
	serpentine/gaw.py          \
	serpentine/__init__.py     \
	serpentine/preferences.py  \
	serpentine/converting.py   \
	serpentine/gnome_util.py   \
	serpentine/mastering.py    \
	serpentine/recording.py    \
	serpentine/export.py       \
	serpentine/gtk_util.py     \
	serpentine/operations.py   \
	serpentine/release.py


uidir= $(datadir)/serpentine
ui_DATA = data/serpentine.glade

bin_SCRIPTS = scripts/serpentine

EXTRA_DIST = $(ui_DATA) $(bin_SCRIPTS)
