AC_PREREQ(2.52)

AC_INIT(playlist_parser, 0.1)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

AM_DISABLE_STATIC
AM_PROG_LIBTOOL

AC_PROG_CC

AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal, no)
PKG_CHECK_MODULES(PL_PARSER, gtk+-2.0 pygtk-2.0 libxml-2.0 gnome-vfs-2.0 glib-2.0 gnome-vfs-module-2.0)
AM_CHECK_PYTHON_HEADERS(,[AC_MSG_ERROR(could not find Python headers)])

DEFSDIR=`pkg-config --variable=defsdir pygtk-2.0`
AC_SUBST(DEFSDIR)

AC_SUBST(PL_PARSER_CFLAGS)
AC_SUBST(PL_PARSER_LIBS)
AC_SUBST(GLIB_GENMARSHAL)

AC_OUTPUT([
Makefile
playlist_parser/Makefile
])
