AM_CFLAGS = @PPPD_GNOME_CFLAGS@
AM_LDFLAGS = @PPPD_GNOME_LIBS@ 

noinst_PROGRAMS = test_tray test_tsu
#test_ppp_dialer test_ppp_status test_tray

#test_ppp_dialer_SOURCES = test_ppp_dialer.c

#test_ppp_status_SOURCES = test_ppp_status.c

test_tray_SOURCES = test_tray.c

test_tsu_SOURCES = test_tsu.c
