AM_CFLAGS  = @PPPD_GNOME_CFLAGS@
AM_LDFLAGS = @PPPD_GNOME_LIBS@ 

noinst_LIBRARIES = libtlib.a

libtlib_a_SOURCES =                  \
	eggtrayicon.h  eggtrayicon.c \
	trefbag.c trefbag.h          \
	ttrayicon.c ttrayicon.h      \
	tutil.c tutil.h              \
	tmacros.h                    \
	tglade.c tglade.h            \
	tcountries.c tcountries.h    \
	tmodule.c tmodule.h          \
	tsu.c tsu.h                  \
	tsu-gksu.c tsu-gksu.h        \
	tsu-gnomesu.c tsu-gnomesu.h  \
	tlib.h

